--- a/Companion/app/src/main/res/layout/activity_login.xml
+++ b/Companion/app/src/main/res/layout/activity_login.xml
@@ -1,71 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:fitsSystemWindows="true"
-    tools:context="com.prozekt.companion.Login">
+    android:orientation="vertical">
 
-    <EditText
-
-        android:id="@+id/username"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/usernameLabel"
-        android:background="@drawable/bg_text"
-        android:drawablePadding="15dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:padding="16dp" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:padding="@dimen/activity_horizontal_margin"
-        android:labelFor="@+id/username"
-        android:id="@+id/usernameLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/username" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/bg_gradient" />
+    </RelativeLayout>
 
-    <TextView
-        android:padding="@dimen/activity_horizontal_margin"
-        android:id="@+id/passLabel"
-        android:labelFor="@+id/password"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/username"
-        android:text="@string/password" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:paddingBottom="@dimen/padding"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
+        android:paddingTop="@dimen/padding"
+        tools:context="com.prozekt.companion.Login">
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/passLabel"
-        android:background="@drawable/bg_text"
-        android:drawablePadding="15dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:padding="16dp" />
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/usernameLabel"
+            android:background="@drawable/bg_text"
+            android:drawablePadding="15dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:padding="16dp" />
 
-    <Button
-        android:id="@+id/submitButton"
-        android:textColor="@android:color/white"
-        android:background="@drawable/bg_button"
-        android:drawablePadding="15dp"
-        android:padding="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/password"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:text="@string/submit" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/usernameLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:labelFor="@+id/username"
+            android:padding="@dimen/padding"
+            android:text="@string/username" />
+
+        <TextView
+            android:id="@+id/passLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/username"
+            android:labelFor="@+id/password"
+            android:padding="@dimen/padding"
+            android:text="@string/password" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/passLabel"
+            android:background="@drawable/bg_text"
+            android:drawablePadding="15dp"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:padding="16dp" />
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/password"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/bg_button"
+            android:drawablePadding="15dp"
+            android:padding="16dp"
+            android:text="@string/submit"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/buttontest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/password"
+            android:text="Button" />
+    </RelativeLayout>
+</LinearLayout>
