--- a/Companion/app/src/main/res/layout/activity_main.xml
+++ b/Companion/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.prozekt.companion.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:textAlignment="center"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/a_title"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/textView1" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView2"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/bg_gradient"/>
+    </RelativeLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView1"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:text="@string/authenticate"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/padding"
+        android:paddingLeft="@dimen/padding"
+        android:paddingRight="@dimen/padding"
+        android:paddingTop="@dimen/padding"
+        tools:context="com.prozekt.companion.MainActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/textView3"
-        app:srcCompat="@drawable/ic_action_fingerprint"
-        tools:ignore="ContentDescription"
-        android:id="@+id/imageView" />
+        <Space
+            android:id="@+id/space0"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_alignParentBottom="true"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:text="@string/instructions"
-        android:textAlignment="center" />
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:padding="10dp"
+            android:layout_below="@+id/space0"
+            android:text="@string/a_title"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:id="@+id/space3" />
 
-    <EditText
-        android:id="@+id/pinEntry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/space3"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="numberPassword"
-        android:singleLine="true" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/descriptionText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/titleText"
+            android:padding="@dimen/padding"
+            android:text="@string/authenticate"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            android:labelFor="@id/pinEntry"/>
+
+        <ImageView
+            android:id="@+id/fpIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/ic_action_fingerprint"
+            tools:ignore="ContentDescription" />
+
+        <EditText
+            android:id="@+id/pinEntry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/bg_text"
+            android:drawablePadding="15dp"
+            android:ems="10"
+            android:inputType="numberPassword"
+            android:padding="16dp"
+            android:singleLine="true" />
+    </RelativeLayout>
+</LinearLayout>
