--- a/Companion/app/src/main/res/layout/activity_set_pin.xml
+++ b/Companion/app/src/main/res/layout/activity_set_pin.xml
@@ -4,79 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/bg_gradient" />
-    </RelativeLayout>
+    android:orientation="vertical"
+    tools:context="com.prozekt.companion.setPIN">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:paddingBottom="@dimen/padding"
-        android:paddingLeft="@dimen/padding"
-        android:paddingRight="@dimen/padding"
-        android:paddingTop="@dimen/padding"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        tools:context="com.prozekt.companion.Login">
+        android:padding="@dimen/padding">
 
         <TextView
-            android:id="@+id/usernameLabel"
+            android:id="@+id/setPinLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:labelFor="@+id/username"
+            android:labelFor="@id/confirmPin"
             android:padding="@dimen/padding"
-            android:text="@string/username" />
+            android:text="@string/setPinHint"
+            android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
+            android:id="@+id/setPin"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/usernameLabel"
+            android:layout_below="@+id/setPinLabel"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/bg_text"
             android:drawablePadding="15dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="numberPassword"
             android:padding="16dp" />
 
         <TextView
-            android:id="@+id/passLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/username"
-            android:labelFor="@+id/password"
-            android:padding="@dimen/padding"
-            android:text="@string/password" />
-
-        <EditText
-            android:id="@+id/password"
+            android:id="@+id/confirmPinLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/passLabel"
+            android:layout_below="@+id/setPin"
+            android:labelFor="@id/setPin"
+            android:padding="@dimen/padding"
+            android:text="@string/confirmPinHint"
+            android:textAlignment="center" />
+
+        <EditText
+            android:id="@+id/confirmPin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/setPin"
+            android:layout_below="@+id/confirmPinLabel"
             android:background="@drawable/bg_text"
             android:drawablePadding="15dp"
             android:ems="10"
-            android:inputType="textPassword"
+            android:inputType="numberPassword"
             android:padding="16dp" />
 
         <Button
-            android:id="@+id/submitButton"
+            android:id="@+id/savePin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/password"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/bg_button"
@@ -84,6 +69,7 @@
             android:padding="16dp"
             android:text="@string/submit"
             android:textColor="@android:color/white" />
+
 
     </RelativeLayout>
 </LinearLayout>
