PIN functionality implimented completely

--- a/Companion/app/src/main/res/layout/activity_login.xml
+++ b/Companion/app/src/main/res/layout/activity_login.xml
@@ -1,89 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:id="@+id/parentLayout">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/avi"
+        style="@style/AVLoadingIndicatorView.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:translationZ="10dp"
+        android:visibility="gone"
+        app:indicatorColor="@color/colorAccent"
+        app:indicatorName="LineScaleIndicator" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/bg_gradient" />
-    </RelativeLayout>
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:paddingBottom="@dimen/padding"
-        android:paddingLeft="@dimen/padding"
-        android:paddingRight="@dimen/padding"
-        android:paddingTop="@dimen/padding"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        tools:context="com.prozekt.companion.Login">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/usernameLabel"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:labelFor="@+id/username"
-            android:padding="@dimen/padding"
-            android:text="@string/username" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/username"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@drawable/bg_gradient" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/usernameLabel"
-            android:background="@drawable/bg_text"
-            android:drawablePadding="15dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:padding="16dp" />
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:paddingBottom="@dimen/padding"
+            android:paddingLeft="@dimen/padding"
+            android:paddingRight="@dimen/padding"
+            android:paddingTop="@dimen/padding"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            tools:context="com.prozekt.companion.Login">
 
-        <TextView
-            android:id="@+id/passLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/username"
-            android:labelFor="@+id/password"
-            android:padding="@dimen/padding"
-            android:text="@string/password" />
+            <TextView
+                android:id="@+id/usernameLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:labelFor="@+id/username"
+                android:padding="@dimen/padding"
+                android:text="@string/username" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/passLabel"
-            android:background="@drawable/bg_text"
-            android:drawablePadding="15dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:padding="16dp" />
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/usernameLabel"
+                android:background="@drawable/bg_text"
+                android:drawablePadding="15dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:padding="16dp" />
 
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/password"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/bg_button"
-            android:drawablePadding="15dp"
-            android:padding="16dp"
-            android:text="@string/submit"
-            android:textColor="@android:color/white" />
+            <TextView
+                android:id="@+id/passLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/username"
+                android:labelFor="@+id/password"
+                android:padding="@dimen/padding"
+                android:text="@string/password" />
 
-    </RelativeLayout>
-</LinearLayout>
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/passLabel"
+                android:background="@drawable/bg_text"
+                android:drawablePadding="15dp"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:padding="16dp" />
+
+            <Button
+                android:id="@+id/submitButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/password"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/bg_button"
+                android:drawablePadding="15dp"
+                android:padding="16dp"
+                android:text="@string/submit"
+                android:textColor="@android:color/white" />
+
+        </RelativeLayout>
+    </LinearLayout>
+</RelativeLayout>
