--- a/Companion/app/src/main/res/values/colors.xml
+++ b/Companion/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff5e62</color>
     <color name="gradientOne">#ff9966</color>
     <color name="gradientTwo">#ff5e62</color>
+    <color name="transparent">#80ffffff</color>
 </resources>
