--- a/Companion/app/src/main/res/layout/activity_login.xml
+++ b/Companion/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/parentLayout">
+    android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/greyview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#60212121"
+        android:translationZ="50dp"
+        android:elevation="4dp"
+        android:visibility="gone"/>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/avi"
@@ -12,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:translationZ="10dp"
+        android:translationZ="60dp"
         android:visibility="gone"
-        app:indicatorColor="@color/colorAccent"
+        app:indicatorColor="@android:color/white"
         app:indicatorName="LineScaleIndicator" />
 
     <LinearLayout
@@ -49,25 +57,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:labelFor="@+id/username"
                 android:padding="@dimen/padding"
-                android:text="@string/username" />
+                android:text="@string/username"
+                android:textAlignment="center" />
 
             <EditText
                 android:id="@+id/username"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/usernameLabel"
+                android:layout_centerHorizontal="true"
                 android:background="@drawable/bg_text"
                 android:drawablePadding="15dp"
-                android:ems="10"
+                android:ems="12"
                 android:inputType="textPersonName"
                 android:padding="16dp" />
 
             <TextView
                 android:id="@+id/passLabel"
+                android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -78,13 +87,13 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/passLabel"
+                android:layout_centerHorizontal="true"
                 android:background="@drawable/bg_text"
                 android:drawablePadding="15dp"
-                android:ems="10"
+                android:ems="12"
                 android:inputType="textPassword"
                 android:padding="16dp" />
 
@@ -92,9 +101,8 @@
                 android:id="@+id/submitButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/password"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
                 android:background="@drawable/bg_button"
                 android:drawablePadding="15dp"
                 android:padding="16dp"
