--- a/Companion/app/src/main/res/layout/activity_set_pin.xml
+++ b/Companion/app/src/main/res/layout/activity_set_pin.xml
@@ -9,6 +9,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/bg_gradient" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/padding">
 
@@ -31,7 +41,7 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/bg_text"
             android:drawablePadding="15dp"
-            android:ems="10"
+            android:ems="12"
             android:inputType="numberPassword"
             android:padding="16dp" />
 
@@ -54,7 +64,7 @@
             android:layout_below="@+id/confirmPinLabel"
             android:background="@drawable/bg_text"
             android:drawablePadding="15dp"
-            android:ems="10"
+            android:ems="12"
             android:inputType="numberPassword"
             android:padding="16dp" />
 
