--- a/Companion/app/src/main/res/layout/activity_main.xml
+++ b/Companion/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:focusable="true"
@@ -19,14 +19,12 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_centerHorizontal="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:paddingBottom="@dimen/padding"
-        android:paddingLeft="@dimen/padding"
-        android:paddingRight="@dimen/padding"
-        android:paddingTop="@dimen/padding"
+        android:padding="@dimen/padding"
         tools:context="com.prozekt.companion.MainActivity">
 
         <TextView
@@ -52,40 +50,20 @@
             android:textColor="@android:color/tertiary_text_light"
             android:textSize="16sp" />
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/pinEntry"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/space">
-
-            <EditText
-                android:id="@+id/pinEntry"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="60dp"
-                android:background="@drawable/bg_text"
-                android:drawablePadding="15dp"
-                android:ems="10"
-                android:imeOptions="actionDone"
-                android:inputType="numberPassword"
-                android:padding="16dp"
-                android:singleLine="true" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="55dp"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/pinEntry"
-                android:layout_marginStart="8dp"
-                android:layout_toEndOf="@+id/pinEntry"
-                android:background="@drawable/bg_button"
-                android:drawablePadding="15dp"
-                android:padding="18dp"
-                android:text="@string/check"
-                android:textColor="@android:color/white" />
-        </RelativeLayout>
+            android:layout_below="@+id/space"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_text"
+            android:drawablePadding="15dp"
+            android:maxLength="4"
+            android:ems="10"
+            android:imeOptions="actionDone"
+            android:inputType="numberPassword"
+            android:padding="16dp"
+            android:singleLine="true" />
 
         <ImageView
             android:id="@+id/fpIcon"
@@ -97,11 +75,11 @@
             tools:ignore="ContentDescription" />
 
         <Space
+            android:id="@+id/space"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/descriptionText"
-            android:id="@+id/space" />
+            android:layout_below="@+id/descriptionText" />
 
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
