--- a/Companion/app/src/main/res/values/colors.xml
+++ b/Companion/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#f5f5f5</color>
     <color name="colorPrimaryDark">#f5f5f5</color>
-    <color name="colorAccent">#ff5e62</color>
-    <color name="gradientOne">#ff9966</color>
-    <color name="gradientTwo">#ff5e62</color>
+    <color name="colorAccent">#0fb8ad</color>
+    <color name="gradientOne">#0fb8ad</color>
+    <color name="gradientTwo">#2cb5e8</color>
 </resources>
