Corrected Grid Random Algo, Added Sliding Grid in SignUP, Corrected Gradient in welcome and OTP page, changed android fail login message

--- a/test/totp/style.css
+++ b/test/totp/style.css
@@ -10,7 +10,7 @@ html, body {
     border-radius: 5px;
     box-shadow: 0 0 10px #d3d3d3;
     height: 100%;
-    background: -webkit-linear-gradient(225deg,#ff9966,#ff5e62);
+    background: -webkit-linear-gradient(225deg,#0fb8ad,#2cb5e8);
     color: #fff;
     width: 90%;
     margin: 5%;
